jupyter/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ui-ingress
  namespace: datalab
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.pomerium.io/allowed_users: |
      - laboitatom@gmail.com
    ingress.pomerium.io/allow_websockets: 'true'
spec:
  rules:
    - host: jupyter.tgu.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jupyterlab
                port:
                  number: 8888
  tls:
    - hosts:
        - jupyter.tgu.ovh
      secretName: jupyter-tls-cert
